--- a/app/styles/profile_styles.css
+++ b/app/styles/profile_styles.css
@@ -6,6 +6,10 @@ footer {
     visibility: hidden;
 }
 
+span[data-testid="stHeaderActionElements"]{
+    display: none;
+}
+
 [data-testid="stHeaderActionElements"]{
     visibility: hidden;
 }
@@ -13,3 +17,76 @@ footer {
 [data-testid="stHeader"] {
     background: linear-gradient(135deg, hsl(20 100% 55%) 0%, hsl(25 100% 60%) 100%);
 }
+
+.st-key-main-container{
+    max-width: 85%;
+    justify-self: center;
+}
+
+
+
+
+
+.st-key-profile-container{
+    max-width: 672px;
+    justify-self: center;
+}
+
+.st-key-edit-personal-data-fields{
+    background-color: white;
+    border-radius: 24px;     
+    padding: 24px;            
+    border: 0; 
+    box-shadow: 0 4px 6px rgba(0,0,0,0.15);
+}
+
+.st-key-sharing-key-description{
+    background-color: white;
+    border-radius: 24px;     
+    padding: 24px;            
+    border: 0; 
+    box-shadow: 0 4px 6px rgba(0,0,0,0.15);
+}
+
+
+/* Estiliza o botão para ser laranja e ocupar toda a largura */
+.stButton>button {
+    background: linear-gradient(135deg, hsl(20 100% 55%) 0%, hsl(25 100% 60%) 100%);
+    width: 100%;
+    color: white;
+    border-radius: 24px;
+    padding: 0.75rem 0;
+    font-weight: bold;
+}
+
+.stButton>button:hover{
+    color: white;
+    border-color: white;
+}
+.stButton>button:active{
+    color: #F8F8F8;
+    border-color: #F8F8F8;
+}
+
+
+#app-logo-header{
+    position:fixed;
+    background-color: white;
+    border-radius: 8px; 
+    top: 7px;
+    left: 100px;
+    z-index: 9999999; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 15px 5px;
+}
+#app-logo-header h3{
+    padding: 0;
+    margin: 0;
+    text-align: center; 
+    color: black; 
+    font-size:12px;
+    font-family: system-ui;
+}
+
