--- a/app/styles/dashboard_styles.css
+++ b/app/styles/dashboard_styles.css
@@ -123,3 +123,8 @@ span[data-testid="stHeaderActionElements"]{
 .stToolbarActions{
     display: none;
 }
+
+
+.container_gzau3_1 ,._profileContainer_gzau_53{
+    display: none;
+}
