--- a/app/styles/login_style.css
+++ b/app/styles/login_style.css
@@ -52,3 +52,8 @@ h1 {
 span[data-testid="stHeaderActionElements"]{
     display: none;
 }
+
+
+.container_gzau3_1 ,._profileContainer_gzau_53{
+    display: none;
+}
