--- a/app/styles/management_dashboard.css
+++ b/app/styles/management_dashboard.css
@@ -9,3 +9,7 @@ footer {
 span[data-testid="stHeaderActionElements"]{
     display: none;
 }
+
+.container_gzau3_1 ,._profileContainer_gzau_53{
+    display: none;
+}
