--- a/app/styles/profile_styles.css
+++ b/app/styles/profile_styles.css
@@ -97,7 +97,6 @@ span[data-testid="stHeaderActionElements"]{
 }
 
 
-
-.container_gzau3_1 ,._profileContainer_gzau_53{
+._container_gzau3_1 ,._profileContainer_gzau3_53{
     display: none;
 }
