--- a/app/styles/profile_styles.css
+++ b/app/styles/profile_styles.css
@@ -26,7 +26,6 @@ span[data-testid="stHeaderActionElements"]{
 
 
 
-
 .st-key-profile-container{
     max-width: 672px;
     justify-self: center;
@@ -100,4 +99,27 @@ span[data-testid="stHeaderActionElements"]{
 
 ._container_gzau3_1 ,._profileContainer_gzau3_53{
     display: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.st-key-auth-component-container {
+    background-color: white;
+    padding: 2.5rem;
+    border-radius: 24px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+    max-width: 448px;
+    margin: auto;
+    margin-top: 4rem; /* Distância do topo */
 }
