--- a/app/styles/dashboard_styles.css
+++ b/app/styles/dashboard_styles.css
@@ -21,9 +21,11 @@ span[data-testid="stHeaderActionElements"]{
 
 
 .st-key-main-container{
-    max-width: 85%;
-    justify-self: center;
+    max-width: 85% !important;
+    align-self: center !important;
+    justify-self: center !important;
 }
+
 
 
 .st-key-filters {
